--- a/HT_tasks_atoffice/HT_tasks_atoffice.csproj
+++ b/HT_tasks_atoffice/HT_tasks_atoffice.csproj
@@ -42,6 +42,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="NamespaceA.cs" />
+    <Compile Include="NamespaceB.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
